[gd_scene load_steps=4 format=3 uid="uid://bk5f72q0c0ijr"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_xifmm"]
[ext_resource type="Texture2D" uid="uid://d1nkv5q1lcph5" path="res://images/user_interface/main_menu.png" id="2_fwkkc"]
[ext_resource type="Theme" uid="uid://sue4tlr8wwrf" path="res://resources/themes/default.tres" id="3_bpare"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xifmm")

[node name="background" type="Sprite2D" parent="."]
texture = ExtResource("2_fwkkc")
centered = false

[node name="new_game_button" type="Button" parent="."]
layout_mode = 0
offset_left = 273.0
offset_top = 496.0
offset_right = 673.0
offset_bottom = 596.0
theme = ExtResource("3_bpare")
text = "nová hra"

[node name="load_button" type="Button" parent="."]
layout_mode = 0
offset_left = 709.0
offset_top = 621.0
offset_right = 1109.0
offset_bottom = 721.0
theme = ExtResource("3_bpare")
text = "načti hru"

[node name="quit_button" type="Button" parent="."]
layout_mode = 0
offset_left = 1150.0
offset_top = 495.0
offset_right = 1550.0
offset_bottom = 595.0
theme = ExtResource("3_bpare")
text = "a ven"

[node name="choose_character_button" type="Button" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
offset_left = 707.0
offset_top = 498.0
offset_right = 1107.0
offset_bottom = 598.0
theme = ExtResource("3_bpare")
text = "vybrat si postavu"

[connection signal="button_up" from="new_game_button" to="." method="_on_new_game_button_button_up"]
[connection signal="button_up" from="load_button" to="." method="_on_load_button_up"]
[connection signal="button_up" from="quit_button" to="." method="_on_quit_button_button_up"]
[connection signal="button_up" from="choose_character_button" to="." method="_on_choose_character_button_button_up"]
